--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -6,13 +6,13 @@ body {
     background-color: rgba(64, 104, 69, 0.855);
     display: flex;
     flex-direction: column;
-    padding:0 150px;
+    padding:0px 150px 20px 150px;
     color: aliceblue;
 }
 .top { 
     display: flex;
     justify-content: space-between;
-    align-items: flex-start;
+    align-items:center;
     margin-bottom: 20px;
 
 }
@@ -32,7 +32,7 @@ ul {
 .left {
     display: flex;
     flex-direction: column;
-    flex: auto;
+   
 }
 .right {
     display:flex;
@@ -52,10 +52,51 @@ h1 {
     border-radius: 5px;
     border: none;
     color: aliceblue;
+    font-weight: bold;
     
 }
+.bottomsign {
+    flex: 0 0 auto;
+    padding:7px 20px;
+    
+    background-color: rgba(64, 104, 69, 0.855);
+    border-radius: 5px;
+    border: 2px solid white;
+    color: aliceblue;
+    font-weight: bold;
+}
+.sendtext {
+    flex: 0 0 auto;
+    margin-top: 15px;
+    padding: 10px 0px;
+    width: 100px;
+    background-color: rgba(64, 104, 69, 0.855);
+    border-radius: 5px;
+    border: none;
+    color: aliceblue;
+}
+.quotebutton {
+    flex: 0 0 auto;
+    margin-top: 15px;
+    padding: 10px 0px;
+    width: 100px;
+    background-color: rgb(255, 255, 255);
+    border-radius: 5px;
+    border-color: rgba(35, 58, 38, 0.855);
+    color: rgba(44, 72, 47, 0.855);
+    border: 1em;
+}
+button:hover {
+    background-color:rgb(34, 69, 22);
+    color:beige;
+}
 .tiles {
+    display: flex;
+    flex-direction: column;
     text-align: center;
+    justify-content: center;
+    padding:30px;
+    
 }
 .tilecontainer {
     display: flex;
@@ -69,4 +110,60 @@ h1 {
     margin: 25px 0px;
     font-size:25px;
     font-weight: 700;
+}
+.review {
+    background-color: rgb(210, 212, 208);
+    padding: 50px 40px 30px 40px;
+    display: flex;
+    flex: auto;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    
+    
+}
+.name {
+    width: 320px;
+align-self: flex-end;
+font-size: 15px;
+font-weight: bold;
+
+}
+.quote {
+    font-size:20px;
+    font-style: italic;
+    font-weight: lighter;
+    display: flex;
+    justify-content: center;
+    width: 400px;
+}
+.action {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 50px;
+}
+.actioncontainer {
+    display: flex;
+    background-color:  rgba(64, 104, 69, 0.855);
+    padding: 20px 80px;
+    gap: 55px;
+    border-radius: 10px;
+    align-items: center;
+}
+.textact {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    
+}
+a {
+    margin-bottom: -10px;
+    color: aliceblue;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.text {
+    color: aliceblue;
 }
