--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -1,12 +1,13 @@
 body {
     display: flex;
     flex-direction: column;
+    font-family: Arial, Helvetica, sans-serif;
 }
 .header {
     background-color: rgba(64, 104, 69, 0.855);
     display: flex;
     flex-direction: column;
-    
+    justify-content: center;
     color: aliceblue;
 }
 .top { 
@@ -23,7 +24,7 @@ body {
 .description {
     display: flex;
     justify-content: center;
-    flex: 1;
+    align-items: center;
     padding: 25px 150px 50px 150px;
     gap: 35px;
 }
@@ -137,7 +138,7 @@ flex: auto;
 }
 .quote {
     font-size:20px;
-    font-style: italic;
+    font-style:italic;
     font-weight: lighter;
     flex: auto;
     width: 400px;
