--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -41,9 +41,11 @@ ul {
 .left {
     display: flex;
     flex-direction: column;
-   flex: 1;
+   flex: 1; 
+   align-items: flex-start;
 }
 .right {
+    display: flex;
     align-self: center;
     justify-content: center;
     flex: 1.24;
